--- a/config-client-app.properties
+++ b/config-client-app.properties
@@ -1,2 +1,5 @@
 # Put application-specific config here (application name: client-config-app)
 some.property=app specific overridden value
+
+cucu.property=app cuc prop
+
