--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
 # Put all global configuration here
 some.property=global
 some.other.property=global
+cucu.property=cuc prop
+cucu.other.property=cucu other
+
