--- a/config-client-app-prod.properties
+++ b/config-client-app-prod.properties
@@ -1,3 +1,5 @@
 # Put application+profile-specific config here (app name: client-config-app) (profile name: prod)
 some.property=profile specific value
 some.other.property=profile specific value
+cucu.property=profile cuc prop
+cucu.other.property=profile cucu other
