--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 # Put all global configuration here
 some.property=global
 some.other.property=global
-cucu.property=cuc prop
+cucu.property=cuc prop 88
 cucu.other.property=cucu other 66
 
