--- a/application.properties
+++ b/application.properties
@@ -2,5 +2,5 @@
 some.property=global
 some.other.property=global
 cucu.property=cuc prop 88
-cucu.other.property=cucu other 66
+cucu.other.property=cucu other HAHAHA
 
